--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
       </div>
     </div>
     <div class="right">
-      <div class="bubble">185 GB Left</div>
+      <div class="bubble">
+        <div><p><strong>185</strong> GB Left</p></div>        
+      </div>
       <div class="right-container">
         <h1>You’ve used <strong>815 GB</strong> of your storage</h1>
         <div class="progress">
@@ -32,9 +34,10 @@
             <div class="circle"></div>
           </div>
         </div>
-        <p>
-          0 GB 1000 GB
-        </p>
+        <div class="flex-container">
+          <div><strong>0 GB</strong></div>
+          <div><strong>1000 GB</strong></div>
+        </div>
       </div>
     </div>
   </div>
