--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="media.css" />
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
   <title>Frontend Mentor | Fylo data storage component</title>
 </head>
 
 <body>
-  <div class="background">
+  <!-- <div class="background">
     <img src="img/bg-desktop.png" alt="wavy background image" />
-  </div>
+  </div> -->
   <div class="container">
     <div class="left">
       <img class="logo" src="img/logo.svg" alt="logo" />
@@ -41,11 +42,12 @@
       </div>
     </div>
   </div>
-  <div class="attribution">
-    Challenge by
-    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
-    <a href="https://www.linkedin.com/in/erica-vannorman-aa294b1b0/">Erica VanNorman</a>.
-  </div>
+  
 </body>
-
+<footer>
+  <div class="attribution">
+  Challenge by
+  <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
+  <a href="https://www.linkedin.com/in/erica-vannorman-aa294b1b0/">Erica VanNorman</a>.
+</div></footer>
 </html>
